<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="MainMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/trackSpinner"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonExport"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:background="#FCFCFC"
            android:text="@string/export_string" />

        <Button
            android:id="@+id/buttonShare"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:background="#FCFCFC"
            android:text="@string/share" />

        <Button
            android:id="@+id/buttonImport"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:background="#FCFCFC"
            android:text="@string/import_string" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:background="#FCFCFC"
            android:text="@string/delete" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:background="#FCFCFC"
            android:text="@string/back" />
    </LinearLayout>

</LinearLayout>