<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".MainMenu" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:src="@drawable/palmpiano" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/buttonGame"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:background="#FCFCFC"
            android:layout_weight="1"
            android:text="@string/game_mode" />

        <Button
            android:id="@+id/buttonPlayback"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:background="#FCFCFC"
            android:layout_weight="1"
            android:text="@string/playback_mode" />

        <Button
            android:id="@+id/buttonComposition"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:background="#FCFCFC"
            android:layout_weight="1"
            android:text="@string/composition_mode" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonLeaderboard"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:background="#FCFCFC"
            android:layout_weight="1"
            android:text="@string/leaderboard" />

        <Button
            android:id="@+id/buttonDummy"
            android:visibility="invisible"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:background="#FCFCFC"
            android:layout_weight="1"
            android:text="" />

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:background="#FCFCFC"
            android:layout_weight="1"
            android:text="@string/settings" />

    </LinearLayout>

</LinearLayout>